--- a/ballll/style.css
+++ b/ballll/style.css
@@ -1,8 +1,5 @@
 body{
-    margin-left: 0;
-    margin-top: 0;
-    display: inline-block;
-    position: relative;
+    margin:0;
     
 }
 
@@ -11,7 +8,7 @@ body{
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 200px; /*choose your width*/
+    width: 23%; /*choose your width*/
     background-color: #45494C; /*choose your color*/
     height: 100%; /* Full height */
     position: fixed; /* Make it stick, even on scroll */
@@ -30,9 +27,15 @@ body{
     color: black;
 }
 .container {
+    /* display: flex; */
     position: fixed; 
     left: 210px;
     right: 10px;
     color: white;
     /* background-color: black; */
+    min-width: 1000px;
+    overflow: hidden;
 }
+/* body > * :not(#nav){
+    background-color:blue
+} */
