--- a/docs/stylesheets/quiz.css
+++ b/docs/stylesheets/quiz.css
@@ -1,23 +1,25 @@
 button.quizBtn {
-    margin: 1ch;
-    min-width: 10vmin;
+    margin: 0.5ch;
+    width: calc(100% - 1ch);
+    padding: 0ch 1ch 0ch 1ch;
     border-radius: 6px;
-    font-size: 3.5ch;
-    text-align: center;
-    text-transform: uppercase;
-    text-decoration: none;
-    border: 4px solid black;
-    outline: none;
-    background-color: #0091ff;
-    color: white;
+    font-size: 2.5ch;
+    text-align: right;
+    border: 0.25vmin solid grey;
+    background-color: transparent;
+    color: grey;
 }
 
 button.quizCorrect {
-    background-color: #39ff14;
+    background-color: #8af44c97;
     color: black;
 }
 
 button.quizIncorrect {
-    background-color: #ff4122;
+    background-color: #f93838de;
     color: black;
+}
+
+div.quiz {
+    width: 100%;
 }
