--- a/overrides/partials/nav.html
+++ b/overrides/partials/nav.html
@@ -1,6 +1,13 @@
 <!--
 
 -->
+{% set class = "md-nav md-nav--primary" %}
+{% if "navigation.tabs" in features %}
+  {% set class = class ~ " md-nav--lifted" %}
+{% endif %}
+{% if "toc.integrate" in features %}
+  {% set class = class ~ " md-nav--integrated" %}
+{% endif %}
 <ul id="nav">
 {% for nav_item in nav %}
     {% if not nav_item.children %}
