--- a/docs/interactive/style.css
+++ b/docs/interactive/style.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  background-color: #121212;
+  background-color: transparent;
   color: white;
   font-family: "Roboto Mono";
   font-size: 14px;
