--- a/docs/stylesheets/style.css
+++ b/docs/stylesheets/style.css
@@ -4,6 +4,12 @@ body {
     --md-footer-bg-color--dark: #161616;
 }
 
+:root>* {
+    --md-primary-fg-color: #141a29;
+    --md-primary-fg-color--light: #ECB7B7;
+    --md-primary-fg-color--dark: #90030C;
+}
+
 [data-md-color-scheme='slate'] {
     --md-default-bg-color: #181a1b;
     --md-footer-bg-color: #161616;
@@ -21,9 +27,12 @@ div[chembox] {
     width: 100%;
     clear: both;
     height: 400px;
-    -moz-transform: scale(0.9, 0.9); /* Moz-browsers */
-    zoom: 0.9; /* Other non-webkit browsers */
-    zoom: 90%; /* Webkit browsers */
+    -moz-transform: scale(0.9, 0.9);
+    /* Moz-browsers */
+    zoom: 0.9;
+    /* Other non-webkit browsers */
+    zoom: 90%;
+    /* Webkit browsers */
 }
 
 .test tr:nth-child(2) {
